2006-04-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Shell Substitutions): Mention the MSYS
	shell issue with double-quoted command substitutions of native
	commands.
	Reported to MSYS by Mark Cave-Ayland, to Autoconf by Keith
	Marshall.

	* Makefile.maint (sc_cast_of_argument_to_free): Do not fail when
	no file matches the glob, discard the warning, set `nullglob'.
	(syntax-check): Likewise.
	(sc_cast_of_x_alloc_return_value): Likewise.
	(sc_cast_of_alloca_return_value, sc_error_exit_success)
	(sc_prohibit_jm_in_m4, .re-list, sc_unmarked_diagnostics)
	(m4-check): Likewise.
	(sc_system_h_headers): Do not print rule on execution.
	(sc_tight_scope): Do not fail for non-existing `src' directory.
	(sc_changelog): Skip the Copyright footer.
	* lib/autoconf/lang.m4: Remove trailing space.

	* lib/autoconf/status.m4: More replacements to
	<tab><space> where this makes sense.

2006-04-06  Stepan Kasal  <kasal@ucw.cz>

	* tests/Makefile.am (maintainer-check-posix): s/POSIXLY_CORRECTLY/POSIXLY_CORRECT/

	* lib/autoconf/status.m4 (_AC_CONFIG_FOOS): Append TAGS to
	  ac_config_<foo>s again, sometimes normalized, sometimes not.
	(AC_CONFIG_FILES, AC_CONFIG_HEADERS, AC_CONFIG_LINKS, AC_CONFIG_COMMANDS):
	  Do not do so here.
	(_AC_CONFIG_REGISTER_DEST): Double quote the tags in macros _AC_LIST_TAGS
	  and_AC_LIST_TAG_COMMANDS; fixes another regression introduced by the
	  2005-07-25 rewrite.  Noticed by Noah Misch.

	* lib/autoconf/general.m4 (AC_PRESERVE_HELP_ORDER): Do not define
	  _AC_PRESERVE_HELP_ORDER, ...
	(AC_ARG_ENABLE, AC_ARG_WITH): ... use AC_PROVIDE_IFELSE insetad.

	* lib/autoconf/general.m4 (AC_ARG_VAR): Do not use m4_divert_once
	  inside m4_expand_once; it is redundant.

	* lib/autoconf/general.m4 (_AC_INIT_HELP): Remove the broken support
	  for --help from Cygnus `configure.'

2006-04-06  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (C Compiler): Warn about #error.  Follows up
	on a patch proposed by Ralf Wildenhues.
