@@ -1,5 +1,14 @@
 2006-04-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/mktests.sh: Only skip internal macros starting with
+	`_AC_' or `__AC_'.  Noted by Stepan Kasal.
+	Update exclusion lists for the test suite to this end:
+	(AC_ARG_VAR): Do test this now.
+	(AC_REPLACE_FUNCS): This needs an argument.
+	(AC_LINKER_OPTION): Remove (renamed to _AC_LINKER_OPTION).
+	(AC_LIST_MEMBER_OF): Likewise (renamed to _AC_LIST_MEMBER_IF).
+	(AC_LINK_FILES): Obsoleted since (and thus AU_DEFUN'ed).
+
 	* doc/autoconf.texi (Shell Substitutions): Mention the MSYS
 	shell issue with double-quoted command substitutions of native
 	commands.
